<resources>
    <string name="app_name">Learning for Kids</string>
    <string name="login">Login</string>

    <string name="correct_answer">Correct!</string>
    <string name="try_again">Try Again</string>

    <string name="game_directions">Learn\nDirections</string>
    <string name="game_days">Learn\nDays</string>
    <string name="game_clock">Learn\nClock</string>
    <string name="game_spelling">Learn\nSpelling</string>

    <string name="label_up">Up</string>
    <string name="label_down">Down</string>
    <string name="label_right">Right</string>
    <string name="label_left">Left</string>
    <string name="label_front">Front</string>
    <string name="label_behind">Behind</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="submit">Submit</string>

    <string name="its_clock">It\'s</string>
    <string name="oclock">o\'clock</string>
    <string name="zero">zero</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="nine">nine</string>
    <string name="ten">ten</string>
    <string name="eleven">eleven</string>
    <string name="twelve">twelve</string>
    <string name="thirteen">thirteen</string>
    <string name="fourteen">fourteen</string>
    <string name="fifteen">fifteen</string>
    <string name="sixteen">sixteen</string>
    <string name="seventeen">seventeen</string>
    <string name="eighteen">eighteen</string>
    <string name="nineteen">nineteen</string>
    <string name="twenty">twenty</string>
    <string name="thirty">thirty</string>
    <string name="fourty">fourty</string>
    <string name="fifty">fifty</string>

    <string name="apple">apple</string>
    <string name="beach">beach</string>
    <string name="cat">cat</string>
    <string name="chair">chair</string>
    <string name="cloud">cloud</string>
    <string name="cow">cow</string>
    <string name="dog">dog</string>
    <string name="duck">duck</string>
    <string name="elephant">elephant</string>
    <string name="fish">fish</string>
    <string name="flower">flower</string>
    <string name="forest">forest</string>
    <string name="glass">glass</string>
    <string name="horse">horse</string>
    <string name="ice">ice</string>
    <string name="mountain">mountain</string>
    <string name="orange">orange</string>
    <string name="potato">potato</string>
    <string name="table">table</string>
    <string name="tomato">tomato</string>
    <string name="train">train</string>
    <string name="tree">tree</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ask_register">Don\'t have an account? Sign up</string>
    <string name="games">Games</string>
    <string name="hello_msg">Hello User</string>

    <string name="clock_game_info_0">What\'s the time?</string>
    <string name="clock_game_info_1">Can you adjust this digital clock?</string>
    <string name="wrong_answer">Sorry you couln\'t guess it</string>
    <string name="days_game_message">Touch the day buttons sequentially</string>
    <string name="img_background">BACKGROUND</string>
    <string name="congratulations">Congratulations!</string>
    <string name="tapScreenToGoBack">Tap screen to go back to main menu</string>
    <string name="similarPic_info">Can you find the similar image(s)?</string>
    <string name="spelling_info">Can you guess the word?</string>
    <string name="times_up">Time\'s Up!</string>
    <string name="out_of_energy">Out of energy!</string>
    <string name="idle_digital_clock">00:00</string>
    <string name="game_similar_image">Find\nSimilar\nImages </string>
    <string name="sign_up">Sign Up</string>
    <string name="password_agian">Password Again</string>
    <string name="ask_login">Already have an account? Log in</string>

    <string name="passwords_dont_match">Passwords are not same</string>
    <string name="wrong_password">Wrong email or password</string>
    <string name="username_exists">This user name is already in use</string>

    <string name="pointtext">Points: </string>
    <string name="fall">Fall</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="trueorfalse">Choose the season</string>
    <string name="textmarch">March</string>
    <string name="textapril">April</string>
    <string name="textmay">May</string>
    <string name="textjune">June</string>
    <string name="textjuly">July</string>
    <string name="textaugust">August</string>
    <string name="textseptember">September</string>
    <string name="textoctober">October</string>
    <string name="textnovember">November</string>
    <string name="textdecember">December</string>
    <string name="textJanuary">January</string>
    <string name="textfebruary">February</string>
    <string name="wrongans"> Wrong answer</string>
    <string name="winter">Winter</string>
    <string name="choose">Choose the correct one</string>
    <string name="xptext">"xp: "</string>
    <string name="months_order">Put the months of the year in order</string>
    <string name="enter">Enter your answer</string>
    <string name="game_months">Learn\nMonths</string>
    <string name="game_multiplication">Learn\nMultiplication</string>
    <string name="game_seasons">Learn\nSeasons</string>

    <string name="empty_username_password">Username, email or password cannot be empty</string>
    <string name="username_less_char">Username have to contain more than 3 character</string>
    <string name="password_less_char">Password have to contain more than 5 character</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email">Email</string>
    <string name="remember_digits_info">Enter digits in shown order</string>
    <string name="remember_backwards_info">Enter digits in reverse order</string>
    <string name="game_remember_digits">Remember\nDigits</string>
    <string name="game_remember_backwards">Remember\nDigits\nBackwards</string>
    <string name="directions_game_message">Where does the bird stand according to the box?</string>
    <string name="entering_to_app">Logging in...</string>

</resources>